# Local-Binary-Pattern_Automated_Benchmarking

./: .gitignore  README.md  chi2_distance.py  load_images_lbp.py  matches.csv  pyproject.toml  run.py  run_experiments.py  visualize_matches.py
archive/: processed_to_raw_image_matching.py.txt
config/: config.yaml  default_config.yaml  extreme_noise_on_query_image_clean_targets.yaml  ltp_example_config.yaml  multi3_scale_completed_lbp_moderate_noise_low_blur.yaml  multi5_scale_completed_lbp_heavy_noise_low_blur.yaml  multi5_scale_completed_lbp_no_noise.yaml  multi_scale_lbp.yaml  multi_scale_ltp_ror_mild_noise.yaml  multi_scale_ltp_ror_mild_noise_mild_scale_shift.yaml  params_for_monty.yaml  ror_completed_lbp_mild_noise.yaml  ror_completed_lbp_no_noise.yaml  ror_lbp_heavy_noise.yaml  ror_lbp_heavy_noise_low_blur.yaml  ror_lbp_no_noise.yaml  test_config.yaml  uniform_lbp_no_noise.yaml
docs/: experiment_arg_examples.txt
results/: Full_Sweep.csv  experiment_log_20260414_133945.csv  experiment_log_20260414_142605.csv  experiment_log_20260414_182451.csv  experiment_log_20260414_185615.csv  matches_ltp_ror_chi2_p8_r1_blur125_correct7067.csv  matches_ltp_ror_cosine_p8_r1_blur125_correct6267.csv  matches_ltp_ror_hellinger_p8_r1_blur125_correct7333.csv  matches_ror_chi2_p8_r1_correct6000.csv  matches_uniform_chi2_p8_r1_correct4800.csv  matches_uniform_cosine_p8_r1_blue1_correct3733.csv  matches_uniform_cosine_p8_r1_correct5067.csv
results/completed_lbp_no_noise/: experiment_config.yaml  match_results.csv
tests/: test_distance_metrics.py  test_experiment_validation.py
(+24 files in other folders)
